# Project-Resonance

./: .cursorrules  .gitignore  LICENSE  README.md  README_CN.md  _pdf_content.txt  evaluate.py  evaluate_model.py  pyproject.toml  requirements.txt  train.py
.cursor/: settings.json
artifacts/: README.md
configs/: task2_bracket_stable.yaml  task3_mod_stable.yaml
docs/: achievements_summary.md  iteration_log.md  known_issues.md  metrics_protocol.md  milestone_log.md  next_step.md  overview.md  paper_abstract.md  paper_evidence_index.md  paper_tables.md  plan_text.txt  repro_seeds.json  risk_log.md  spec_from_pdf.md  sprint_week5_8.md
experiments/: run_ablations.py
manifests/: task1.jsonl  task2.jsonl  task2_easy.jsonl  task2_full.jsonl  task2_tiny.jsonl  task3.jsonl  task3_easy.jsonl  task3_multistep.jsonl  task3_tiny.jsonl
reports/: ablation_ood.md  ablations.csv  ablations.md  eval_summary.json  eval_summary.md  negative_controls.md  ood_summary.md  system_overview_final.json  task3_ood.csv  task3_ood.md  test_metrics.json
scripts/: ablation_architecture.py  ablation_channel_noise.py  ablation_thinking_gap.py  baseline_comparison.py  curriculum_dimension.py  debug_tm_data.py  debug_tm_model.py  debug_tm_train.py  demo_realtime.py  demo_video_script.py  diagnose_ssm_stability.py  download_speech_commands.py  dropout_control.py  dynamic_k_training.py  efficiency_benchmark.py  eval_multi_seed.py  eval_real_speech.py  eval_task3_ood.py  generate_artifacts.py  generate_audio_examples.py  generate_tts_dataset.py  generate_tts_dataset_v2.py  generate_tts_ffmpeg.py  (+41 more)
(+134 files in other folders)
