[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jericho"
version = "0.1.0"
description = "End-to-end reasoning on raw waveforms without symbolic intermediaries"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "pyyaml>=6.0",
    "pytest>=7.0.0",
]

[project.optional-dependencies]
baselines = ["transformers>=4.30.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=prepend"
